[package]
name = "tilleuls-webapp"
version = "0.1.0"
authors = ["Yannick Heinrich <yannick.heinrich@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
calamine = "0.16.1"
thiserror = "1.0"
log = "0.4"
env_logger = "0.7"

chrono = "0.4.11"

reqwest = "0.10.4"
select = "0.4.3"

tokio = { version = "0.2", features = ["full"] }
warp = "0.2"
handlebars = "3.0.1"

serde = { version = "1.0", features = ["derive"] }
serde_urlencoded = "0.5.1"

listenfd = "0.3"
hyper = { version = "0.13", features = ["stream"] }

num = "0.2.1"
num-traits = "0.2"