[package]
name = "xslx-importer"
version = "0.1.0"
authors = ["Yannick Heinrich <yannick.heinrich@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
"tilleuls-domain" = { path = "../domain"}
calamine = "0.16.1"
thiserror = "1.0"
log = "0.4"
env_logger = "0.7"

chrono = "0.4.11"